fix column 3 alignment

--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ button {
 }
 
 .signup-img {
-  width: 80px;
+  width: 60px;
   margin-right: 10px;
   height: 50px;
   background-color: red;
